# Pagewise-core

./: .dockerignore  .env.example  .gitignore  DEEPSEEK_OCR_INTEGRATION.md  DOCLING_INTEGRATION.md  Dockerfile  IMAGES_APP_MIGRATION.md  README.md  RENAME_SUMMARY.md  VERIFICATION_CHECKLIST.md  check_page_status.py  docker-compose.yml  manage.py  pyproject.toml
bucket/: admin.py  api.py  models.py  schemas.py  tests.py
bucket/migrations/: 0001_initial.py
deepseek_ocr/: README.md  __init__.py  client.py  extractor.py  parser.py  processor.py  tests.py  utils.py
docling_presets/: admin.py  api.py  apps.py  models.py  schemas.py
docling_presets/migrations/: 0001_initial.py
docpond/: api.py  asgi.py  celery.py  fields.py  models.py  settings.py  urls.py  wsgi.py
documents/: admin.py  api.py  docling_processor.py  language_codes.py  models.py  schemas.py  tasks.py  tests.py  views.py
documents/migrations/: 0001_initial.py  0002_create_default_docling_settings.py  0002_remove_page_bbox_visualization_and_more.py  0003_document_ocr_preset_page_page_image.py  0003_enable_postgres_extensions.py  0003_remove_doclingsettings_output_format.py  0004_add_deepseek_ocr_support.py  0004_enable_postgres_extensions.py  (+11 more)
groups/: admin.py  api.py  apps.py  models.py  schemas.py  tests.py
images/: admin.py  models.py  tasks.py  views.py
ocr_presets/: admin.py  api.py  apps.py  models.py  ocr_processor.py  schemas.py
pagewise/: __init__.py  api.py  asgi.py  celery.py  models.py  settings.py  urls.py  wsgi.py
ponds/: admin.py  api.py  apps.py  models.py  schemas.py  tests.py
(+6 files in other folders)
